:lipstick: style(navbar): fix toggle menu visibility

--- a/packages/oui-navbar/_mixins.less
+++ b/packages/oui-navbar/_mixins.less
@@ -336,15 +336,7 @@
       top: 0;
     }
 
-    &_toggle {
-      display: block;
-
-      /* stylelint-disable indentation */
-      .tablet({
-        display: none;
-      });
-      /* stylelint-enable indentation */
-    }
+    &_toggle { display: none; }
 
     // Variant 'right' for Menus
     &_right {
